Migrate to a new version of RoseGarden library adapted for Folia;
(cherry picked from commit 5d01935aac1ac5042cd0a304644d8a942f59d0dd)